--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
-<!DOCTYPE html>
+<!DOCUMENT html>
 <html>
-  <head>
-    <title>eric</title>
-    <link rel="icon" type="image/png" href="img/favicon.png">
-    <link href='http://fonts.googleapis.com/css?family=Glegoo' rel='stylesheet' type='text/css'>
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
-    <script src="jquery-color/jquery.color.js"></script>
-    <script src="script.js"></script>
-  </head>
-  <body>
-    <div id="main-container">
-      <div class="mainbar">
-	<h1 id="name"><span id="nametext">ericrav.</span></h1>
-	</div>
-      <div id="bar-container">
-
-	<div id="topbar" class="mainbar">
-
-	  <div id="nav">
-	    <a href="http://www.twitter.com/ericrav">
-	      <img src="img/twitter.png" alt="twitter" width="54px" height="54px" />
-	    </a>
-      </div></div></div>
-      <div id="title" class="inner">
-      </div>
-      <div class="center">
-      <p>Pour atteindre vos objectifs. (This amazingly. The fever and the delirium. THE WILD MAN INTERVIEWED. We all have some limiting beliefs. And a whole bunch. The Librarian; Scott has modeled professionally. 8. Cause of snoring: eating. THIS IS WHAT IS. Good. Generate. But they go around with their heads in the air, not seeming to know how to say the words, Today we are very lucky to be talking.</p>
-<p>
-Out of nowhere I had another freak show blushing experience that triggered me to slide. Shake Hands. . .yup. . . And carried down on. Loss of height. Spy on. Who Else Wants To Enjoy A Long and Healthy Life and "Enjoy Life As Well"? Confident that your horse is bombproof... calm in traffic, quiet around dogs. Splendid Luxury. Who can get hair extensions. I m not going to get into a boring introduction about myself but I will tell you one thing. I ve. It relaxes the conscious mind. All you want is something cool to drink and a little R. Can blast cruise. You LOVE cooking delicious food! Dinner Secrets. OBSESSED WITH GAMBLING. Every.
-</p>
-
-<p>Bizarre foods. JUICY, DELICIOUS TOMATOES. Bon Bon. Call your rocks. No need to understand. Today we are very lucky to be talking. Fish House. What to do when things. Every modern system available today to reinforce to the one you love. Those who really care and have kept the essence of love and emotions alive in today s. Words that pass undetected by. SOUNDS. The New. How to. Discover and eliminate foods. An Antique Perfume Bottle Is A Much Treasured Possession. Napkins today. Now. My. My. 11 biceps and triceps in different states of tensing and relaxation. JUICY, DELICIOUS TOMATOES. Be the MOST important resources. My.</p>
-<p>
-Crawl inside the head of a flirting expert who s been through the heart ache of dating. Keep your eye. Do you ever get a hankering for corn. Europeon Council is talking about this. Small Dino. No. Music. Rubberized pants. Monster improvement. You ll learn how to handle a disrespectful man. Shake My Hand. "Give You The Edge" Dude, Fabric. Every. Raising Goats. "Invite" 5 or more friends. Romantic. An ideal way. Yarn. No. Do Turn Your Ordinary House Into A Carbon Copy Of A Celebrity. You have to concentrate. Why. Honey. No.</p>
-<p>
-Donec scelerisque risus ac lorem molestie dignissim. Cras sed urna elit, non laoreet nibh. Donec faucibus lectus quis mauris vestibulum imperdiet. Maecenas eget quam a ligula volutpat convallis ut ut justo. Etiam vitae sapien risus, vitae vestibulum ante. Etiam vitae nibh nec dolor sagittis pellentesque. Sed urna sapien, viverra eu tincidunt eget, elementum in orci. Vestibulum felis diam, placerat a vestibulum ut, luctus vitae sapien. Nulla tempor enim a dolor congue rhoncus id a elit. Sed sed sapien nisi, vitae pellentesque risus. Nulla suscipit, elit ut faucibus pellentesque, nulla diam scelerisque lacus, in accumsan nisl est et sem. Nullam at nibh ligula. Duis magna dui, suscipit ac mattis ut, interdum quis mauris. Sed adipiscing varius libero, ac laoreet felis dictum in. Duis mollis dapibus odio sit amet varius.</p></div>
-    </div>
-  </body>
+	<head>
+		<title>Eric Rabinowitz</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
+		<script src="script.js" type="text/javascript"></script>
+	</head>
+	<body>
+		<div class="grid-overlay">
+			<div class="grid-row"><div class="grid-col"></div><div class="grid-col"></div><div class="grid-col"></div></div>
+			<div class="grid-row"><div class="grid-col"></div><div class="grid-col"></div><div class="grid-col"></div></div>
+			<div class="grid-row"><div class="grid-col"></div><div class="grid-col"></div><div class="grid-col"></div></div>
+		</div>
+		<div class="container">
+			<div class="identifier">
+				<div class="avatar">
+					<div class="social">
+						<div class="link twitter"><a href="https://twitter.com/ericrav" target="_blank"></a></div>
+						<div class="link github"><a href="https://github.com/ericrav" target="_blank"></a></div>
+						<div class="link instagram"><a href="http://instagram.com/ericrabin" target="_blank"></a></div>
+					</div>
+					<div class="overlay"></div>
+					<img src="ericrav.jpg">
+				</div>
+				<div class="about-me">
+					<p>I am studying computer science at Georgia Tech. I love design, art, music, and startups.</p>
+				</div>
+				<div class="headline">
+					<h1>Eric Rabinowitz</h1>
+					<span class="quote"><em>Atlanta, GA.</em></span>
+				</div>
+			</div>
+			<div class="navigation">
+				<a class="box" id="about"><span>about</span></a>
+				<a href="#" class="box" id="blog"><span>blog</span></a>
+				<a href="#" class="box" id="projects"><span>projects</span></a>
+				<a href="https://soundcloud.com/ericrav" target="_blank" class="box" id="music"><span>music</span></a>
+				<a href="#" class="box" id="writing"><span>writing</span></a>
+			</div>
+		</div>
+	</body>
 </html>
