--- a/projects/wip/hipstring/3.0/index.html
+++ b/projects/wip/hipstring/3.0/index.html
@@ -54,7 +54,7 @@
         <p>0 people have provided this artist with feedback. Be the first.</p>
         <p><strong>Break it down: </strong></p>
       </div>
-      <div class="attribute">
+      <div class="attribute" data-att="0">
         <h2>Melody <span class="glyphicon glyphicon-question-sign"></span></h2>
         <div class="voting">
           <div class="vote negative">
