redid style again

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 				</div>
 			</div>
 			<div class="navigation">
-				<a class="box" id="about"><span>about</span></a>
-				<a href="#" class="box" id="blog"><span>blog</span></a>
-				<a href="#" class="box" id="projects"><span>projects</span></a>
-				<a href="https://soundcloud.com/ericrav" target="_blank" class="box" id="music"><span>music</span></a>
-				<a href="#" class="box" id="writing"><span>writing</span></a>
+				<a href="#" class="box" id="about">about</a>
+				<a href="#" class="box" id="blog">blog</a>
+				<a href="#" class="box" id="projects">projects</a>
+				<a href="https://soundcloud.com/ericrav" target="_blank" class="box" id="music">music</a>
+				<a href="#" class="box" id="writing">writing</a>
 			</div>
 		</div>
 	</body>
