working on projects page and navigation

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Eric Rabinowitz</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/mainstyle.css">
+		<link rel="stylesheet" type="text/css" href="css/home.css">
 		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
@@ -38,7 +39,7 @@
 			<div class="navigation">
 				<a href="#" class="box" id="about">about</a>
 				<a href="#" class="box" id="blog">blog</a>
-				<a href="#" class="box" id="projects">projects</a>
+				<a href="projects.html" class="box" id="projects">projects</a>
 				<a href="https://soundcloud.com/ericrav" target="_blank" class="box" id="music">music</a>
 				<a href="#" class="box" id="writing">writing</a>
 			</div>
