--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 						<div class="link twitter"><a href="https://twitter.com/ericrav" target="_blank"></a></div>
 						<div class="link github"><a href="https://github.com/ericrav" target="_blank"></a></div>
 						<div class="link instagram"><a href="http://instagram.com/ericrabin" target="_blank"></a></div>
+						<div class="link twitter"><a href="https://twitter.com/ericrav" target="_blank" alt="ericrav's twitter" title="Twitter"></a></div>
+						<div class="link github"><a href="https://github.com/ericrav" target="_blank" alt="ericrav's github" title="Github"></a></div>
+						<div class="link instagram"><a href="http://instagram.com/ericrabin" target="_blank" alt="ericrabin's instragram" title="Instagram"></a></div>
 					</div>
 					<div class="overlay"></div>
 					<img src="ericrav.jpg">
