--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,7 @@
 					<div class="description">
 						<h2>Hipstring</h2>
 						<p>Hipstring allows musicians to receive feedback on their work.</p>
+						<p class="keywords quote"><em>KEYWORDS: Web development, Python, Google App Engine, Twitter Bootstrap, HTML5 & CSS3, Javscript, AJAX</em></p>
 					</div>
 				</div></a>
 				<a href="#" target="_blank"><div class="project" id="hipstring">
