place holder homepage

--- a/index.html
+++ b/index.html
@@ -1,48 +1,47 @@
-<!DOCUMENT html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Eric Rabinowitz</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<link rel="stylesheet" type="text/css" href="css/mainstyle.css">
-		<link rel="stylesheet" type="text/css" href="css/home.css">
-		<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
-		<script src="script.js" type="text/javascript"></script>
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<div class="grid-overlay">
-			<div class="grid-row"><div class="grid-col"></div><div class="grid-col"></div><div class="grid-col"></div></div>
-			<div class="grid-row"><div class="grid-col"></div><div class="grid-col"></div><div class="grid-col"></div></div>
-			<div class="grid-row"><div class="grid-col"></div><div class="grid-col"></div><div class="grid-col"></div></div>
-		</div>
-		<div class="container">
-			<div class="identifier">
-				<div class="avatar">
-					<div class="social">
-						<div class="link twitter"><a href="https://twitter.com/ericrav" target="_blank"></a></div>
-						<div class="link github"><a href="https://github.com/ericrav" target="_blank"></a></div>
-						<div class="link instagram"><a href="http://instagram.com/ericrabin" target="_blank"></a></div>
+		<div id="c1" class="container">
+			<div class="inner">
+				<div class="name">
+					<h1>ERIC RABINOWITZ</h1>
+					<div class="links">
+						<a href="mailto:helloericrav@gmail.com"><i class="fa fa-envelope"></i></a>
+						<a href="https://twitter.com/ericrav" target="_blank"><i class="fa fa-twitter-square"></i></a>
+						<a href="https://github.com/ericrav" target="_blank"><i class="fa fa-github-square"></i></a>
+						<a href="https://www.linkedin.com/pub/eric-rabinowitz/64/ba4/119/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+						<a href="http://instagram.com/ericrabin" target="_blank"><i class="fa fa-instagram"></i></a>
+						<i class="placeholder"></i>
 					</div>
-					<div class="overlay"></div>
-					<img src="ericrav.jpg">
 				</div>
-				<div class="about-me">
-					<p>I am studying computer science at Georgia Tech. I love design, art, music, and startups.</p>
-				</div>
-				<div class="headline">
-					<h1>Eric Rabinowitz</h1>
-					<span class="quote"><em>Atlanta, GA.</em></span>
-				</div>
-			</div>
-			<div class="navigation">
-				<a href="#" class="box" id="about">about</a>
-				<a href="#" class="box" id="blog">blog</a>
-				<a href="projects.html" class="box" id="projects">projects</a>
-				<a href="https://soundcloud.com/ericrav" target="_blank" class="box" id="music">music</a>
-				<a href="#" class="box" id="writing">writing</a>
 			</div>
 		</div>
+
+		<div id="c2" class="container">
+			<div class="inner">
+				<div class="name">
+					<h1>ERIC RABINOWITZ</h1>
+					<div class="links">
+						<a href="mailto:helloericrav@gmail.com"><i class="fa fa-envelope"></i></a>
+						<a href="https://twitter.com/ericrav" target="_blank"><i class="fa fa-twitter-square"></i></a>
+						<a href="https://github.com/ericrav" target="_blank"><i class="fa fa-github-square"></i></a>
+						<a href="https://www.linkedin.com/pub/eric-rabinowitz/64/ba4/119/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+						<a href="http://instagram.com/ericrabin" target="_blank"><i class="fa fa-instagram"></i></a>
+						<i class="placeholder"></i>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
+		<script src="script.js" type="text/javascript"></script>
 	</body>
 </html>
